# RecommenderSystemGradioUI

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README  README.md  heroku.yml  pyproject.toml  ui.py
recommender_ui/: app.py
