[tool.poetry]
name = "rec-sys"
version = "0.1.0"
description = "Recommender System Gradio UI"
authors = ["Jorit Studer <jorit.studer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rec_sys"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gradio = "^3.26.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
isort = "^5.12.0"
mypy = "^0.982"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true